Reformat for Snellius use

--- a/examples/analyze_metrics.ipynb
+++ b/examples/analyze_metrics.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e3d223fa",
    "metadata": {},
    "outputs": [
@@ -145,6 +145,7 @@
    "source": [
     "# Load configuration\n",
     "config = load_config('../config/model_default.yaml')\n",
+    "config = load_config('../config/test.yaml')\n",
     "\n",
     "# Initialize CLIP\n",
     "clip_model, clip_preprocess = clip.load(\"ViT-B/32\", device=device)\n",
