--- a/examples/analyze_metrics.ipynb
+++ b/examples/analyze_metrics.ipynb
@@ -642,7 +642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "xAI",
    "language": "python",
    "name": "python3"
   },
@@ -656,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
